// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute EUSXPrice should calculate price based on yield pool and vesting schedule 1`] = `
{
  "data": {
    "result": 4.996003996003996,
  },
  "result": 4.996003996003996,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1167649871111,
    "providerDataRequestedUnixMs": 1167649871111,
  },
}
`;

exports[`execute EUSXPrice should error if accounts are missing information 1`] = `
{
  "errorMessage": "Failed to calculate EUSX price: Error: Invalid vesting schedule fields",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute EUSXPrice should error if fetchAccountInformation fails 1`] = `
{
  "errorMessage": "Failed to calculate EUSX price: Error: Simulated account fetch failure",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;
